# snapLoad-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  main.py  pyproject.toml
app/: api.py  download_controller.py  helpers.py  job_registry.py  models.py  repositories.py  schemas.py  utils.py  validators.py
app/controllers/: sd_controller.py  yt_controller.py
app/core/: __init__.py  config.py  constants.py  enums.py  exceptions.py
app/managers/: __init__.py  cleanup_scheduler.py  file_manager.py  job_manager.py
app/routes/: admin.py  download.py  files.py  health.py
app/services/: __init__.py  base_download_service.py  cleanup_service.py  download_orchestrator.py  spotify_service.py  youtube_service.py
app/storage/: downloads.db  index.py  media.py
docs/: MVP_SPEC.md  README.es.md
logs/112196a9/: meta-112196a9.json
logs/1d1ca9df/: meta-1d1ca9df.json
logs/a88f8bb0/: meta-a88f8bb0.json
scripts/: install_deps.sh
